--- a/campaigner-user-service.properties
+++ b/campaigner-user-service.properties
@@ -1,1 +1,6 @@
 server.port=${PORT:8080}
+spring.datasource.url=jdbc:postgresql://localhost:5432/ds_users
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=password
+spring.datasource.username=postgres
