--- a/campaigner-user-service.properties
+++ b/campaigner-user-service.properties
@@ -1,5 +1,5 @@
 server.port=${PORT:8080}
-spring.datasource.url=jdbc:postgresql://localhost:5432/ds_users
+spring.datasource.url=jdbc:postgresql://localhost:5432/ds-users
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.password=password
