--- a/campaigner-user-service.properties
+++ b/campaigner-user-service.properties
@@ -1,7 +1,7 @@
 server.port=${PORT:8080}
 spring.datasource.url=jdbc:postgresql://localhost:5432/ds-users
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.password=password
 spring.datasource.username=postgres
 # Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
