trying to allow updating again

--- a/campaigner-user-service.properties
+++ b/campaigner-user-service.properties
@@ -1,7 +1,7 @@
 server.port=${PORT:8080}
 spring.datasource.url=jdbc:postgresql://localhost:5432/ds-users
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 spring.datasource.password=password
 spring.datasource.username=postgres
